pijama_driver/tests/type_check/pass/mod.rs
mod arithmetic;
mod bindings;
mod comparison;
mod conditionals;
mod functions;
mod literals;
mod logic;
mod sequences;
