pijama_driver/tests/type_check/fail/mod.rs
mod arithmetic;
mod bindings;
mod comparison;
mod conditionals;
mod functions;
mod logic;
mod sequences;
mod variables;
